--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<!--Technical meta-->
+
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 		<title>YesPlayer</title>
 	</head>
 	<body>
-		<script src="./app.js"></script>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3">
+								<img width="100%" src="https://images.8tracks.com/cover/i/000/653/740/alesso_web-007-2282.jpg?rect=584,0,2336,2336&q=98&fm=jpg&fit=max&w=640&h=640" alt="Card image cap">
+							</div>
+							<div class="col-md-9">
+								<h4 class="card-title">Card title</h4>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="card">
+						<div class="row">
+							<div class="col-md-3">
+								<img width="100%" src="https://yt3.ggpht.com/-B-A2kq1ekwY/AAAAAAAAAAI/AAAAAAAAAAA/6ioLFAlGP0g/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Card image cap">
+							</div>
+							<div class="col-md-9">
+								<h4 class="card-title">Card title</h4>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--Temporary fix for module loading to window-->
+
+		<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+
+		<!--Dependencie code-->
+
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+		<!--App code-->
+
+		<script src="../dist/main.bundle.js"></script>
 	</body>
 </html>
