--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
 		<title>YesPlayer</title>
 	</head>
 	<body>
-		<div class="container-fluid">
-			<div class="row">
+		<div class="container-fluid flex">
+			<div class="row decks">
 				<div class="col-md-6">
 					<div class="card">
 						<div class="row">
@@ -37,6 +37,60 @@
 								<a href="#" class="btn btn-primary">Go somewhere</a>
 							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row song-picker">
+				<div class="col-md-2">
+					<div class="card">
+						<ul class="nav flex-column">
+							<li class="nav-item">
+								<a class="nav-link active" href="#">Active</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Link</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">Link</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link disabled" href="#">Disabled</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-md-10">
+					<div class="card">
+						<table class="table">
+							<thead>
+								<tr>
+									<th scope="col">#</th>
+									<th scope="col">First Name</th>
+									<th scope="col">Last Name</th>
+									<th scope="col">Username</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<th scope="row">1</th>
+									<td>Mark</td>
+									<td>Otto</td>
+									<td>@mdo</td>
+								</tr>
+								<tr>
+									<th scope="row">2</th>
+									<td>Jacob</td>
+									<td>Thornton</td>
+									<td>@fat</td>
+								</tr>
+								<tr>
+									<th scope="row">3</th>
+									<td>Larry</td>
+									<td>the Bird</td>
+									<td>@twitter</td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</div>
 			</div>
