--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
 	<body>
 		<div class="window">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-5">
 					<div class="card">
 						<div class="row">
-							<div class="col-md-3">
+							<div class="col-md-4">
 								<img width="100%" src="https://images.8tracks.com/cover/i/000/653/740/alesso_web-007-2282.jpg?rect=584,0,2336,2336&q=98&fm=jpg&fit=max&w=640&h=640" alt="Card image cap">
 							</div>
-							<div class="col-md-9">
+							<div class="col-md-8">
 								<h4 class="card-title">Card title</h4>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 								<a href="#" class="btn btn-primary">Go somewhere</a>
@@ -25,16 +25,20 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-2">
+					<div class="card">
+					</div>
+				</div>
+				<div class="col-md-5">
 					<div class="card">
 						<div class="row">
-							<div class="col-md-3">
-								<img width="100%" src="https://yt3.ggpht.com/-B-A2kq1ekwY/AAAAAAAAAAI/AAAAAAAAAAA/6ioLFAlGP0g/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Card image cap">
-							</div>
-							<div class="col-md-9">
+							<div class="col-md-8">
 								<h4 class="card-title">Card title</h4>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 								<a href="#" class="btn btn-primary">Go somewhere</a>
+							</div>
+							<div class="col-md-4">
+								<img width="100%" src="https://yt3.ggpht.com/-B-A2kq1ekwY/AAAAAAAAAAI/AAAAAAAAAAA/6ioLFAlGP0g/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="Card image cap">
 							</div>
 						</div>
 					</div>
@@ -46,8 +50,8 @@
 						<nav class="nav-group">
 							<h5 class="nav-group-title">Library</h5>
 							<a class="nav-group-item active">
-								<span class="fa fa-spotify fa-fw"></span>
-								Spotify
+								<span class="fa fa-soundcloud fa-fw"></span>
+								Soundcloud
 							</a>
 							<span class="nav-group-item">
 								<span class="fa fa-youtube-play fa-fw"></span>
