--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,10 @@
 					<div class="pane-sm sidebar">
 						<nav class="nav-group">
 							<h5 class="nav-group-title">Library</h5>
+							<a class="nav-group-item">
+								<span class="fa fa-bandcamp fa-fw"></span>
+								Bandcamp
+							</a>
 							<a class="nav-group-item active">
 								<span class="fa fa-soundcloud fa-fw"></span>
 								Soundcloud
